# discord-notify

./: CMakeLists.txt  LICENSE
src/: main.cpp
